[FIX] ajustando gap entre as sections e responsividade section1

--- a/src/pages/post/styles.module.scss
+++ b/src/pages/post/styles.module.scss
@@ -3,6 +3,7 @@
     min-height: 100vh;
     background: #FCF8ED;
     padding: 3rem;
+    overflow-x: hidden;
     .post{
         position: relative;
         text-align: center;
