--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -532,7 +532,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      gap: 10rem;
+      gap: 3rem;
       .title{
         text-align: center;
         justify-content: center;
@@ -699,6 +699,16 @@
           .card{
             width: 25rem;
           }
+        }
+      }
+    }
+  }
+
+  @media (max-width: 550px) {
+    .section1{
+      .content{
+        .title{
+          font-size: 2.6rem;
         }
       }
     }
@@ -901,8 +911,23 @@
     }
 }
 
-@media (max-width: 420px) {
-  
+@media (max-width: 400px) {
+  .section1{
+    .content{
+
+      .title{
+        width: 25rem;
+        h2{
+          font-size: 2.8rem;
+        }
+      }
+      .subtitle{
+        p{
+          font-size: 1.4rem;
+        }
+      }
+    }
+  }
 }
 
 
@@ -986,6 +1011,7 @@
           font-size: 0.8rem;
         }
       }
+
     }
     
   }
